fix: custom scrollbars

--- a/src/components/CustomScrollbars/CustomScrollbars.scss
+++ b/src/components/CustomScrollbars/CustomScrollbars.scss
@@ -4,6 +4,12 @@
   height: 6px;
 }
 
+.scrollbar-content-container {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+}
+
 .thumb-vertical,
 .thumb-horizontal {
   border-radius: 3px;
